4.EKS/4-2.Deployment+Service/base/patch_deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollout
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: nginx:latest
