4.EKS/4-2.Deployment+Service/base/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
spec:
  selector:
    app: nginx
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
