4.EKS/4-2.Deployment+Service/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-green
spec:
  selector:
    app: nginx
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
