4.EKS/4-2.Deployment+Service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/instance: sol-cicd-pip
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-service-blue
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
